# pytemplate

./: .readthedocs.yml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  requirements.txt
examples/: __init__.py
mirasurf_py_template/: __init__.py  config.py
pytemplate/: __init__.py
tests/: __init__.py  test_config.py  test_integration.py
